[package]
name = "orb-commands"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "cachix-use"
path = "src/bin/cachix-use.rs"

[[bin]]
name = "cachix-install"
path = "src/bin/cachix-install.rs"

[dependencies]
xshell = "0.2.0"
anyhow = "1.0"
